# Veritas-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  WORK_SPLIT.md  debug_mime.py  debug_nltk.py  docker-compose.yml  download_manual.py  download_models.py  liar_script.py  load_liar.py  log_fever.txt  payload_verify.json  probe_fever.py  project_status_cl.md  pyproject.toml  requirements.txt  test_wiki.py  verification_guide.md  verify_system.py
.claude/: settings.local.json
.github/workflows/: ci.yml
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js
models/: manifest.json  optimal_weights.json  optimal_weights_quick.json
models/fakenewsnet_baseline/: temperature.json  test_results.json
models/fever_baseline/: config.json  eval_results.json  label_map.json  temperature.json
models/liar_baseline/: config.json  label_map.json  temperature.json  test_results.json  tokenizer.json
notebooks/: train_fever_colab.ipynb  train_fnn_colab.ipynb  train_liar_colab.ipynb
scripts/: run_api.py
src/: api_server.py  api_server_old.py  evaluate.py
src/models/: calibrate.py  common.py  fusion.py  inference.py  optimize_weights.py  retrieval.py  retrieval_quality_check.py  train_fakenewsnet.py  train_fever.py  train_liar.py
src/utils/: article_scraper.py  claim_extractor.py  openai_client.py
tests/: test_api.py  test_article_scraper.py  test_claim_extractor.py  test_fusion.py
